--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "next": "latest",
+    "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
