--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
     "@svgr/webpack": "^5.5.0",
     "next": "latest",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-sticky": "^6.0.3"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
